Fix failing tests